[FileAPI] FileReader should throw an InvalidStateError exception when readyState is LOADING https://bugs.webkit.org/show_bug.cgi?id=88212

Patch by Li Yin <li.yin@intel.com> on 2012-06-07
Reviewed by Jian Li.

Source/WebCore:

From Spec: http://www.w3.org/TR/FileAPI/#readAsBinaryString
FileReader should throw an InvalidStateError exception instead of NOT_ALLOWED_ERR
when the readyState is LOADING.
Also delete OperationNotAllowedException related code, because it is not longer needed.

Tests: fast/files/read-file-async.html
       fast/files/workers/worker-read-file-async.html

* CMakeLists.txt:
* DerivedSources.cpp:
* DerivedSources.make:
* DerivedSources.pri:
* GNUmakefile.list.am:
* Target.pri:
* WebCore.gypi:
* WebCore.vcproj/WebCore.vcproj:
* WebCore.xcodeproj/project.pbxproj:
* dom/DOMExceptions.in:
* fileapi/FileReader.cpp:
(WebCore::FileReader::readInternal): Changed it to throw INVALID_STATE_ERR.
* fileapi/FileReader.idl: Changed it to raise DOMException for all read methods.
* fileapi/OperationNotAllowedException.cpp: Removed.
* fileapi/OperationNotAllowedException.h: Removed.
* fileapi/OperationNotAllowedException.idl: Removed.

LayoutTests:

From spec: http://www.w3.org/TR/FileAPI/#readAsBinaryString
FileReader should throw an InvalidStateError exception instead of NOT_ALLOWED_ERR.

* fast/files/read-file-async-expected.txt:
* fast/files/workers/worker-read-file-async-expected.txt:

Canonical link: https://commits.webkit.org/106337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119698 268f45cc-cd09-0410-ab3c-d52691b4dbfc