Source/WebCore/DerivedSources.cpp
@@ -255,7 +255,6 @@
 #include "JSNotation.cpp"
 #include "JSNotificationCenter.cpp"
 #include "JSNotification.cpp"
-#include "JSOperationNotAllowedException.cpp"
 #include "JSOverflowEvent.cpp"
 #include "JSPageTransitionEvent.cpp"
 #include "JSPerformance.cpp"
